--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.1",
     "g": "^2.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.11",
     "pg": "^8.11.3",
     "swagger-jsdoc": "^6.2.8",
